--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/rqt_gui_cpp
-	previous = 
-	base = 82f2f77
+	previous = 82f2f77
+	base = 822ccfb
 	trim = 
 	trimbase = 
