--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/rqt_gui_py
-	previous = 
-	base = 17e640e
+	previous = 17e640e
+	base = dca0ba9
 	trim = 
 	trimbase = 
