--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/rqt_gui_cpp
-	previous = 
-	base = c56e24a
+	previous = c56e24a
+	base = 6d33331
 	trim = 
 	trimbase = 
