--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/rqt_gui_cpp
-	previous = 
-	base = 7e4eb29
+	previous = 7e4eb29
+	base = aa7a312
 	trim = 
 	trimbase = 
