--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/rqt
-	previous = 
-	base = f42cfbb
+	previous = f42cfbb
+	base = 718990b
 	trim = 
 	trimbase = 
