--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/rqt_gui_py
-	previous = 
-	base = 591fce1
+	previous = 591fce1
+	base = 2c14d0c
 	trim = 
 	trimbase = 
