--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/rqt_gui_py
-	previous = 
-	base = 4e44e78
+	previous = 4e44e78
+	base = a953844
 	trim = 
 	trimbase = 
