--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/rqt_gui
-	previous = 
-	base = 67c9112
+	previous = 67c9112
+	base = e99667f
 	trim = 
 	trimbase = 
