--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/rqt_gui
-	previous = 
-	base = 2119806
+	previous = 2119806
+	base = 87ad54c
 	trim = 
 	trimbase = 
