--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/rqt_py_common
-	previous = 
-	base = 225652c
+	previous = 225652c
+	base = cc48f5f
 	trim = 
 	trimbase = 
