--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/rqt_py_common
-	previous = 
-	base = 261f861
+	previous = 261f861
+	base = 2aa8dc5
 	trim = 
 	trimbase = 
