--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_gui_cpp
-	base = 2244fa2
-	trimbase = 
+	base = 22c390e
+	trimbase = 2244fa2
 	parent = upstream
 	previous = 1b986e3
