--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_gui
-	base = 0e93ee3
-	trimbase = 
+	base = b652bdd
+	trimbase = 0e93ee3
 	parent = upstream
 	previous = 1b986e3
