--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_gui_py
-	base = a0ccf03
-	trimbase = 
+	base = 2e1c7f9
+	trimbase = a0ccf03
 	parent = upstream
 	previous = 1b986e3
