--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt
-	base = 639605c
-	trimbase = 
+	base = fde3ad1
+	trimbase = 639605c
 	parent = upstream
 	previous = 1b986e3
