--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_py_common
-	base = a0b37f0
-	trimbase = 
+	base = b25cda2
+	trimbase = a0b37f0
 	parent = upstream
 	previous = 1b986e3
