--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 80d7103
-	base = d7f120a
+	base = d6a69e3
 	trim = rqt_gui_cpp
-	trimbase = 
+	trimbase = d7f120a
