--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 80d7103
-	base = 1c273cd
+	base = 45a95de
 	trim = rqt_gui
-	trimbase = 
+	trimbase = 1c273cd
