--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 80d7103
-	base = 4ee4765
+	base = bdc0512
 	trim = rqt_gui_py
-	trimbase = 
+	trimbase = 4ee4765
