--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 80d7103
-	base = fdfb254
+	base = 67152e4
 	trim = rqt
-	trimbase = 
+	trimbase = fdfb254
