--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 80d7103
-	base = 5a14fbe
+	base = 739bfce
 	trim = rqt_py_common
-	trimbase = 
+	trimbase = 5a14fbe
