--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.1-1": ["Tue Mar 10 2020", "Dirk Thomas", "dthomas@osrfoundation.org"]}
+{"0.5.2-1": ["Fri Jun 12 2020", "Dirk Thomas", "dthomas@osrfoundation.org"], "0.5.1-1": ["Tue Mar 10 2020", "Dirk Thomas", "dthomas@osrfoundation.org"]}
