--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_gui_cpp
-	base = 976a2d8
-	trimbase = 
+	base = 70df44e
+	trimbase = 976a2d8
 	parent = upstream
 	previous = 80d7103
