--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_gui
-	base = 3df9740
-	trimbase = 
+	base = d605863
+	trimbase = 3df9740
 	parent = upstream
 	previous = 80d7103
