--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_gui_py
-	base = 61df8b6
-	trimbase = 
+	base = cbe873b
+	trimbase = 61df8b6
 	parent = upstream
 	previous = 80d7103
