--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt
-	base = 4d37e6e
-	trimbase = 
+	base = afa94b0
+	trimbase = 4d37e6e
 	parent = upstream
 	previous = 80d7103
