--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_py_common
-	base = 00376c3
-	trimbase = 
+	base = f9c97d8
+	trimbase = 00376c3
 	parent = upstream
 	previous = 80d7103
