--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7627b7c
-	base = 3982633
+	base = 8678eb3
 	trim = rqt_gui
-	trimbase = 
+	trimbase = 3982633
