--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7627b7c
-	base = ef8f81e
+	base = ed2fc91
 	trim = rqt
-	trimbase = 
+	trimbase = ef8f81e
