--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7627b7c
-	base = a3f1a22
+	base = a660f12
 	trim = rqt_gui_py
-	trimbase = 
+	trimbase = a3f1a22
