--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7627b7c
-	base = 4185afa
+	base = 325ffad
 	trim = rqt_gui_cpp
-	trimbase = 
+	trimbase = 4185afa
