--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7627b7c
-	base = e46cd6f
+	base = b12a420
 	trim = rqt_py_common
-	trimbase = 
+	trimbase = e46cd6f
