--- a/package.xml
+++ b/package.xml
@@ -2,16 +2,13 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>rqt_gui</name>
-  <version>0.5.2</version>
+  <version>0.5.3</version>
   <description>rqt_gui provides the main to start an instance of the ROS integrated graphical user interface provided by qt_gui.</description>
-  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
-
+  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
   <license>BSD</license>
-
   <url type="website">http://ros.org/wiki/rqt_gui</url>
   <url type="repository">https://github.com/ros-visualization/rqt</url>
   <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>
-
   <author>Dirk Thomas</author>
 
   <buildtool_depend>catkin</buildtool_depend>
