--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_gui
-	base = 1401ba6
-	trimbase = 
+	base = 4077383
+	trimbase = 1401ba6
 	parent = upstream
 	previous = 7627b7c
