--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt
-	base = 90ce267
-	trimbase = 
+	base = 693f2bf
+	trimbase = 90ce267
 	parent = upstream
 	previous = 7627b7c
