--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_gui_py
-	base = 404e130
-	trimbase = 
+	base = 70ee3af
+	trimbase = 404e130
 	parent = upstream
 	previous = 7627b7c
