--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_gui_cpp
-	base = 17c9950
-	trimbase = 
+	base = fe6ae9a
+	trimbase = 17c9950
 	parent = upstream
 	previous = 7627b7c
