--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_py_common
-	base = 2d5bec9
-	trimbase = 
+	base = d48d853
+	trimbase = 2d5bec9
 	parent = upstream
 	previous = 7627b7c
