--- a/rqt/package.xml
+++ b/rqt/package.xml
@@ -1,6 +1,6 @@
-<package>
+<package format="3">
   <name>rqt</name>
-  <version>0.5.3</version>
+  <version>0.5.4</version>
   <description>rqt is a Qt-based framework for GUI development for ROS. It consists of three parts/metapackages<br />
     <ul>
      <li>rqt (you're here)</li>
@@ -9,7 +9,7 @@
     </ul>
    rqt metapackage provides a widget <a href = "http://ros.org/wiki/rqt_gui">rqt_gui</a> that enables multiple `rqt` widgets to be docked in a single window.
   </description>
-  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
+  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>
   <license>BSD</license>
   <url type="website">http://ros.org/wiki/rqt</url>
   <url type="repository">https://github.com/ros-visualization/rqt</url>
@@ -17,12 +17,13 @@
   <author>Dirk Thomas</author>
   <author>Dorian Scholz</author>
   <author>Aaron Blasdel</author>
+  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend version_gte="0.3.0">rqt_gui</run_depend>
-  <run_depend version_gte="0.3.0">rqt_gui_cpp</run_depend>
-  <run_depend version_gte="0.3.0">rqt_gui_py</run_depend>
+  <exec_depend version_gte="0.3.0">rqt_gui</exec_depend>
+  <exec_depend version_gte="0.3.0">rqt_gui_cpp</exec_depend>
+  <exec_depend version_gte="0.3.0">rqt_gui_py</exec_depend>
 
   <export>
     <metapackage/>
