--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 604c01f
-	base = bcf1b0d
+	base = 94e68f7
 	trim = rqt
-	trimbase = 
+	trimbase = bcf1b0d
