--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 604c01f
-	base = 288c032
+	base = fea03cd
 	trim = rqt_gui
-	trimbase = 
+	trimbase = 288c032
