--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 604c01f
-	base = bf82df8
+	base = 124e8db
 	trim = rqt_gui_cpp
-	trimbase = 
+	trimbase = bf82df8
