--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 604c01f
-	base = ccec05f
+	base = 9684723
 	trim = rqt_gui_py
-	trimbase = 
+	trimbase = ccec05f
