--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 604c01f
-	base = 76ccc54
+	base = 2eec537
 	trim = rqt_py_common
-	trimbase = 
+	trimbase = 76ccc54
