--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5ca3e7
-	base = 6943e63
+	base = 3f3953a
 	trim = rqt_py_common
-	trimbase = 
+	trimbase = 6943e63
