--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5ca3e7
-	base = 7d917db
+	base = 60937c3
 	trim = rqt_gui_py
-	trimbase = 
+	trimbase = 7d917db
