--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5ca3e7
-	base = 3726569
+	base = 3edf186
 	trim = rqt_gui_cpp
-	trimbase = 
+	trimbase = 3726569
