--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5ca3e7
-	base = 674523b
+	base = 5781a60
 	trim = rqt_gui
-	trimbase = 
+	trimbase = 674523b
