--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5ca3e7
-	base = a964529
+	base = d4261af
 	trim = rqt
-	trimbase = 
+	trimbase = a964529
