--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.4": ["Dharini Dutia", "dharini@openrobotics.org"]}
+{"0.5.5": ["Dharini Dutia", "dharini@openrobotics.org"], "0.5.4": ["Dharini Dutia", "dharini@openrobotics.org"]}
